# teleimager

./: CLAUDE.md  cam_config_server.yaml  pyproject.toml  setup_autostart.sh
src/teleimager/: image_client.py  image_server.py
